<resources>
    <string name="app_name" translatable="false">FastTrack</string>
    <string name="app_name1">FastTrack</string>
    <string name="canceled">Canceled</string>
    <string name="canceledCamera">Canceled Camera</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="changeLanguage">Change language</string>
    <string name="changeLanguage2">Select You Language</string>
    <string name="user">User</string>
    <string name="owner">Owner</string>
    <string name="franchise">Franchise</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_login_id">Enter your Login Id</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="or">Or</string>
    <string name="launch_activity">Launch activity</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="next">Next</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="process_with_login_id">Process With Login ID</string>
    <string name="process_with_mobile_number">Process With Mobile Number</string>
    <string name="err_network_failure">Network failure : inform the you and possibly retry</string>
    <string name="err_We_cant_find_account">We cant find an account with this credentials</string>
    <string name="err_email_id_not_found">Unauthorized or Your email id not found</string>
    <string name="err_unauthorized_token_expired">Unauthorized or Token of user not found or expired</string>
    <string name="err_data_not_found">Data are Not found from server</string>
    <string name="err_phone_not_found">Phone Number Not found</string>
    <string name="err_Too_Many_Requests">Too Many Requests</string>
    <string name="err_not_found">Not found</string>
    <string name="err_unknown_error">Unknown error</string>
    <string name="err_server_broken">Internal Server Error or Server down</string>
    <string name="err_msg_mobile">Enter your Mobile Number</string>
    <string name="err_msg_mobile_too_short">Entered Mobile Number Too Short</string>
    <string name="err_msg_mobile_too_long">Entered Mobile Number Too Long</string>
    <string name="err_msg_mobile_invalid">Invalid Mobile Number !</string>
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="login_id">Login Id</string>
    <string name="passwordCurrent">Current Password</string>
    <string name="passwordNew">New Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="password_forget">Forget Password</string>
    <string name="err_msg_email">Please Enter Email</string>
    <string name="err_msg_email_invalid">Invalid Email !!</string>
    <string name="err_msg_internet">Check Internet Connection !</string>
    <string name="err_msg_mandatory_fields">Please enter mandatory fields!</string>
    <string name="we_will_auto_verify_the">We will auto verify the</string>
    <string name="pleaseEnter10DigitNumber">Please Enter 10 Digit Number</string>
    <string name="pleaseEnterPincode">Please Enter Pin code</string>
    <string name="pleaseEnterPan_no">Please Enter Pan No</string>
    <string name="pleaseEnterAdhaar_number">Please Enter Adhaar Number</string>
    <string name="pleaseEnterMobileNumber">Please Enter Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="sent_to">sent to</string>
    <string name="otp1">OTP ?</string>
    <string name="don_t_received">Do not received</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="skip">Skip</string>
    <string name="gps">GPS</string>
    <string name="gps_details">Secure your vehicles with Fasttrack high accuracy GPS tracking.Get live and custom alerts for your vehicle.</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="select_your_vehicle1">Choose one of the following ranges from below</string>
    <string name="please_select_vehicle_type">Please Select Vehicle Type</string>
    <string name="please_select_vehicle">Please Select Vehicle</string>
    <string name="please_select_vehicle1">Please Select the Vehicle</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="support1">Enter your Query</string>
    <string name="vehicleAdd">Add Vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicleBrand">Vehicle Brand</string>
    <string name="vehicleName">Vehicle Name</string>
    <string name="vehicleType">Vehicle Type</string>
    <string name="vehicleNumber">Vehicle Number</string>
    <string name="pleaseEnterVehicleNumber">Please Enter Vehicle Number</string>
    <string name="OwnerName">Owner Name</string>
    <string name="vehicleImage">Vehicle Image</string>
    <string name="driver">Driver</string>
    <string name="driverAdd">Add Driver</string>
    <string name="demo">Demo</string>
    <string name="about">About us</string>
    <string name="logout1">Are you sure, you want to logout</string>
    <string name="logout2">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="dob">DOB</string>
    <string name="mobileno">Mobile Number</string>
    <string name="emergency_no">Emergency Number</string>
    <string name="email">Email</string>
    <string name="email_user">Email or Username</string>
    <string name="email_address">Email Address</string>
    <string name="address">address</string>
    <string name="shutdown_the_engine">Shutdown the engine, if your vehicle is disturbing or in emergency.</string>
    <string name="car_name">car Name</string>
    <string name="car_number">DL07 C 83837 </string>
    <string name="driver_name">Driver Name</string>
    <string name="Please_Enter_driver_name">Please Enter Driver Name</string>
    <string name="driver_licence_number1">Driver licence number :-</string>
    <string name="phone_number">Phone Number :-</string>
    <string name="phone_number1">Phone Number</string>
    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="you_can_request_a_demo_with_us_any_time_you_want">You can request a demo with us any time you want</string>
    <string name="name">Name</string>
    <string name="nameFull"> Full Name</string>
    <string name="date_of_demo">Date of demo</string>
    <string name="time_slot1">Time slot</string>
    <string name="viewProfile">View Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="massage">Massage</string>
    <string name="send_massage">Send Massage</string>
    <string name="request_a_demo">Request a Demo</string>
    <string name="your_car_is_stopped">Location of car status data are not found</string>
    <string name="tv_your_car_is_stopped_detail">Parked at Alpha One Mall | Since 11:25</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="add">Add</string>
    <string name="device">Device</string>
    <string name="geoFencing">Geo Fencing </string>
    <string name="add_device">Add Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="suspend">Suspend</string>
    <string name="suspendDevice">Suspend Device</string>
    <string name="name_vehicle">Name Vehicle</string>
    <string name="rag_number">Rag Number</string>
    <string name="rag_number1">Rag Number:-</string>
    <string name="mileage">Mileage</string>
    <string name="mileage1">Mileage:-</string>
    <string name="sim_no">Sim No.</string>
    <string name="Please_Enter_sim_no">Please Enter Sim No.</string>
    <string name="device_no">Device No.</string>
    <string name="device_id">Device ID</string>
    <string name="Please_Enter_device_no">Please Enter Device No.</string>
    <string name="device_name">Device Name</string>
    <string name="devicesrnumber">DeviceSrNumber</string>
    <string name="devicesrnumber1">Device Serial Number</string>
    <string name="Please_Enter_deviceSrNumber">Please Enter Device Serial Number</string>
    <string name="license_number">License Number</string>
    <string name="Please_Enter_license_number">Please Enter License Number</string>
    <string name="pleaseEnterUserName">Please Enter User Name</string>
    <string name="pleaseEnterFullName">Please Enter Full Name</string>
    <string name="home">Home</string>
    <string name="registration">Registration</string>
    <string name="please_fill_in_your_details">Please fill in your details</string>
    <string name="retype_password">Retype password</string>
    <string name="password_must_be_8_15_characters_with_at_least">Password must be 8-15 characters with at least</string>
    <string name="password_must_be_8_15_characters_with_at_least_uppercase">Password must be 8-15 characters with at least 1 uppercase 1 lowercase and 1 numeric digit</string>
    <string name="enteredPasswordTooShort">"Entered Password Too Short</string>
    <string name="enteredPasswordTooLong">"Entered Password Too Long</string>
    <string name="pleaseEnterPassword">"Please Enter Password</string>
    <string name="password_not_match">"Password not match</string>
    <string name="continue1">Continue</string>
    <string name="signup">  SignUp</string>
    <string name="signup1">If you have not Account?  </string>
    <string name="signup2">If you have not Account? then SignUp</string>
    <string name="verification_code">Verification Code</string>
    <string name="a_verification_code_was_send_to">A verification code was send to</string>
    <string name="kindly_check_your_email_for_your_verification_code">Kindly check your email for your verification code.</string>
    <string name="the_verification_code_will_be_expire_in_10_minutes">The verification code will be expire in 10 minutes.</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="signin_failed">Failed signin</string>
    <string name="user_profile">Welcome to your profile page</string>
    <string name="profile_title">User Profile</string>
    <string name="delete_user">DELETE USER</string>
    <string name="sign_out_error">Failed to sign out</string>
    <string name="user_deletion_error">Failed to delete user</string>
    <string name="google_geo_app_id" translatable="false">AIzaSyDf3bbLSkrJx5bnBZzk_qjWCvNzNtvRiqo</string>
    <string name="google_maps_key" translatable="false">AIzaSyDf3bbLSkrJx5bnBZzk_qjWCvNzNtvRiqo</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">Fasttrack</string>
    <string name="fastags">Fastags</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="notification">Notification</string>
    <string name="refresh">Refresh</string>
    <string name="signal">Signal</string>
</resources>