<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/iv_signal"
        android:title="@string/signal"
        android:backgroundTint="@color/colorIconCode"
        android:icon="@drawable/signal_defalt"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/iv_refresh"
        android:backgroundTint="@color/colorIconCode"
        android:title="@string/refresh"
        android:icon="@drawable/referesh_n"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/iv_notification"
        android:title="@string/notification"
        android:backgroundTint="@color/colorIconCode"
        android:icon="@drawable/ic_notifications_24dp"
        app:showAsAction="always"
        />

    <!-- important part -->
<!--    <item-->
<!--        android:id="@+id/activity_main_alerts_menu_item"-->
<!--        android:title="Alerts"-->
<!--        app:actionLayout="@layout/app_bar_home"-->
<!--        app:showAsAction="ifRoom"/>-->

<!--    <item-->
<!--        android:id="@+id/iv_setting"-->
<!--        android:title="@string/settings"-->
<!--        android:backgroundTint="@color/colorIconCode"-->
<!--        android:icon="@drawable/ic_setting"-->
<!--        app:showAsAction="ifRoom"-->
<!--        />-->

</menu>


