<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_blue1"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="@dimen/margin_10">

        <ImageView
            android:id="@+id/iv_back"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_arrow_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verification_code"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_txt_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_top"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_verification_code_was_send_to"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_h6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="t*****g@gmail.com"
            android:textColor="@color/colorTextBlack3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/kindly_check_your_email_for_your_verification_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_verification_code_will_be_expire_in_10_minutes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/enter_your_verification_code"
            android:textStyle="bold" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:paddingTop="@dimen/margin_25"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:pinBackgroundDrawable="@drawable/shape_border" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/didn_t_receive_a_code"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_verification_code"
            android:textColor="@color/colorPrimary2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/margin_10">

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="Continue"
            style="@style/TextButton"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_txt_size" />
    </LinearLayout>


</RelativeLayout>