<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/margin_20"
    android:layout_marginStart="@dimen/margin_20"
    tools:context=".ui.fragment.SupportFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border5"
        android:padding="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_50"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_grey"
            android:drawablePadding="@dimen/margin_10"
            android:background="@null"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_grey"
        android:padding="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_30"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone_grey"
            android:drawablePadding="@dimen/margin_10"
            android:maxLength="12"
            android:background="@null"
            android:hint="@string/mobileno"
            android:imeOptions="actionNext"
            android:inputType="phone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_grey"
        android:padding="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_30"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/support"
            android:drawableTint="@color/colorIconCode"
            android:drawablePadding="@dimen/margin_10"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/support"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60"
        android:gravity="center_horizontal"
        android:text="@string/submit"
        style="@style/TextButton"
        />

</LinearLayout>